--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.2",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
     "@types/jest": "^29.2.1",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "axios": "^1.1.3",
     "expo": "~46.0.16",
     "expo-auth-session": "^3.7.1",
     "expo-font": "~10.2.0",
@@ -24,6 +27,7 @@
     "react": "18.0.0",
     "react-native": "^0.69.6",
     "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.8.4"
